placeholder contents added to index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
   </head>
 
   <body>
+    <img src="./assets/test-background-image.jpg" alt="shared screen" />
+    <h1>shared screen canvas app</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio reiciendis
+      dolorem magnam, officiis voluptatem cum aliquid rerum non laborum, earum
+      debitis necessitatibus facere eos repudiandae sapiente velit minus
+      temporibus placeat!
+    </p>
     <main></main>
   </body>
 </html>
